# TestRAG

./: .gitignore  DESIGN.md  PLAN.md  README.md  cli.py  pyproject.toml  requirements.txt
rag/: __init__.py  chunking.py  config.py  embedding.py  generate.py  ingest.py  models.py  pipeline.py  query_plan.py  retrieve.py  store.py
tests/: __init__.py  conftest.py  test_chunking.py  test_e2e_quality.py  test_ingest.py  test_query_plan.py
